manifests/base/manager/manager_config_patch.yaml
# Copyright The Kubeflow Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-trainer-controller-manager
spec:
  template:
    spec:
      containers:
      - name: manager
        args:
        - --config=/controller_manager_config.yaml
        - --zap-log-level=2
        volumeMounts:
        - name: kubeflow-trainer-config
          mountPath: /controller_manager_config.yaml
          subPath: controller_manager_config.yaml
          readOnly: true
      volumes:
      - name: kubeflow-trainer-config
        configMap:
          name: kubeflow-trainer-config
