manifests/base/manager/network_policy.yaml
# Copyright The Kubeflow Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubeflow-trainer-controller-manager
  labels:
    app.kubernetes.io/name: trainer
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: kubeflow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: trainer
      app.kubernetes.io/component: manager
      app.kubernetes.io/part-of: kubeflow
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              trainer.kubeflow.org/trainjob-ancestor-step: trainer
      ports:
        - protocol: TCP
          port: 10443
    - ports:
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 8081
